--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+#database
+spring.datasource.url= jdbc:mysql://localhost:3306/mediciadatabase
+spring.datasource.username=root
+spring.datasource.password=shubhojeet
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #hibernate configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
